# diskstat

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  IMPROVEMENTS.md  LICENSE  README.md
.claude/agents/: auditor.md  improver.md
.github/workflows/: ci.yml  release-please.yml
src/: actions.rs  app.rs  config.rs  i18n.rs  json_export.rs  main.rs  treemap_algo.rs  types.rs  utils.rs
src/scanner/: cache.rs  debug_log.rs  dupes.rs  mod.rs  tree.rs  tree_cache.rs  walk.rs
src/ui/: dialogs.rs  extensions.rs  file_tree.rs  menu.rs  mod.rs  statusbar.rs  style.rs  treemap.rs
