[package]
name = "diskstat"
version = "0.6.0"
edition = "2021"
description = "Fast TUI disk usage analyzer — WinDirStat/ncdu alternative"
license = "MIT"
repository = "https://github.com/pszymkowiak/diskstat"
default-run = "diskstat"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
indextree = "4"
blake3 = "1"
# jwalk removed — replaced by custom parallel walker + getattrlistbulk on macOS
bytesize = "1"
rayon = "1.10"
open = "5"
arboard = "3"
unicode-width = "0.2"
libc = "0.2"
rusqlite = { version = "0.31", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[profile.release]
opt-level = 3
lto = true

